styles.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
html {
	--color-1: rgb(255, 255, 255);
	--color-2: rgb(0, 0, 0);
}

header {
	position: relative;
	height: 100vh;
	width: 100%;
	background-image: url(/img/athlete-bike-black-and-white-cycle-260409.jpg);
	background-size: cover;
	background-repeat: no-repeat;
	display: flex;
	justify-content: center;
	align-items: center;
}
.desktop-nav {
	position: absolute;
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	top: 0;
	left: 0;
	height: 5rem;
}
.desktop-nav ul {
	display: flex;
	margin-right: 3rem;
}
.desktop-nav ul a {
	color: var(--color-1);
	text-decoration: none;
	text-transform: uppercase;
	padding: 0.5rem 1rem;
}
.logo {
	color: var(--color-1);
	font-family: "Permanent Marker", sans-serif;
	font-size: 1.5rem;
	text-transform: uppercase;
	margin-left: 6rem;
}
.burger-btn {
	position: absolute;
	top: 0;
	right: 0;
	margin: 1.5rem 2rem;
	flex-direction: column;
	align-items: center;
	justify-content: space-between;
	width: 3rem;
	height: 2rem;
	display: none;
}
.burger-btn span {
	display: block;
	background-color: #fff;
	width: 100%;
	height: 3px;
}

header h1 {
	color: var(--color-1);
	font-size: 4.5rem;
	text-transform: uppercase;
	text-align: center;
	font-family: "roboto", sans-serif;
	letter-spacing: 8px;
}
#mobile-nav {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: var(--color-2);
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	display:none;
}
#mobile-nav .logo{
	margin:0;
}
#mobile-nav ul{
	display:flex;
	flex-direction: column;
	margin-bottom:15rem;
}
#mobile-nav li{
	list-style: none;
}
#mobile-nav a{
	display:block;
	color:var(--color-1);
	text-decoration: none;
	text-transform: uppercase;
	font-size: 1.5rem;
	padding: 2rem 2rem;
}
 ul a:hover{
	text-decoration: underline;
}
#mobile-nav:target{
	display:flex;
}

